# serve-md

./: Cargo.toml  LICENSE  README.md  install.sh  uninstall.sh
.github/workflows/: ci.yml  release.yml
src/: cli.rs  error.rs  handlers.rs  lib.rs  main.rs  markdown.rs  resolve.rs  scan.rs  server.rs  template.rs
static/: style.css
tests/: integration.rs
