[package]
name = "serve-md"
version = "0.1.0"
edition = "2021"
authors = ["serve-md contributors"]
description = "Serve Markdown files as a clean, navigable local website"
license = "MIT"

[lib]
name = "serve_md"
path = "src/lib.rs"

[[bin]]
name = "serve-md"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.7"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
mime_guess = "2"
open = "5"
percent-encoding = "2"
pulldown-cmark = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "signal"] }
tower-http = { version = "0.5", features = ["trace", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
tempfile = "3"
